--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ python = "^3.11"
 python-decouple = "^3.8"
 requests = "^2.32.3"
 asknews = "^0.9.1"
-numpy = "^1.26.0"
+numpy = "^2.4.0"
 openai = "^1.57.4"
 python-dotenv = "^1.0.1"
 forecasting-tools = "^0.2.10"
 matplotlib = "^3.10.0"
+safetensors = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
