--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Environment
 .env
 .venv/
 .vscode/
+
+# Python Cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Logs
+*.log
+bot_output.log
+
+# Build/Dist
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Other
+.DS_Store
+forecast_count.txt
