feat: implement PolyMarket and Google Trends tools + comprehensive tool testing suite
- Added PolyMarketSearchTool for real-time market probabilities
- Added GoogleTrendsTool for search interest analysis
- Updated research agent toolkit with the new tools
- Implemented robust test suite in test_tools.py for all 10 tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ forecasting-tools = "^0.2.10"
 matplotlib = "^3.10.0"
 safetensors = "^0.7.0"
 exa-py = "^2.0.2"
+pytrends = "^4.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
